--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "codeigniter4/framework": "^4.0",
+        "dompdf/dompdf": "^3.1",
         "firebase/php-jwt": "^6.5",
         "razorpay/razorpay": "2.*",
         "setasign/fpdf": "^1.8"
