--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ public/invoice/
 vendor/
 writable/
 
+
 app/Config/App.php
 app/Config/Database.php
 upload
@@ -13,3 +14,4 @@ ypublic/uploads.zip
 app/Config/Razorpay.php
 public/public_rest.zip
 public/uploads.zip
+app/Config/firebase-service-account.json
