--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "codeigniter4/framework": "^4.0",
         "dompdf/dompdf": "^3.1",
         "firebase/php-jwt": "^6.5",
+        "google/auth": "^1.44",
+        "guzzlehttp/guzzle": "^7.9",
         "razorpay/razorpay": "2.*",
         "setasign/fpdf": "^1.8"
     },
