--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ public/public_rest.zip
 public/uploads.zip
 app/Config/firebase-service-account.json
 app/Config/service-account.json
+public/index.php
